--- a/package.json
+++ b/package.json
@@ -126,11 +126,12 @@
   },
   "devDependencies": {
     "antd": "^3.5.3",
-    "autoprefixer": "7.1.6",
     "babel-plugin-import": "^1.1.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "less": "^3.9.0",
     "less-loader": "4.0.5",
+    "mocker-api": "^1.7.8",
+    "mockjs": "^1.0.1-beta3",
     "react-redux": "^7.1.0",
     "react-router": "^4.1.2",
     "react-router-dom": "^5.0.1",
