--- a/.babelrc
+++ b/.babelrc
@@ -3,6 +3,6 @@
         "react-app"
       ],
     "plugins": [
-      ["import", { "libraryName": "antd", "libraryDirectory": "es", "style": "css" }] // `style: true` 会加载 less 文件
+      ["import", { "libraryName": "antd", "libraryDirectory": "es", "style": true }] // `style: true` 会加载 less 文件
     ]
   }
