--- a/package.json
+++ b/package.json
@@ -131,7 +131,7 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "express": "^4.17.1",
     "less": "^3.9.0",
-    "less-loader": "4.0.5",
+    "less-loader": "^4.1.0",
     "mockjs": "^1.0.1-beta3",
     "react-redux": "^7.1.0",
     "react-router": "^4.1.2",
